--- a/application.yml
+++ b/application.yml
@@ -1,14 +1,14 @@
-﻿spring: 
-    profiles: 
-        active: 
-        - dev
+spring: 
+  profiles: 
+    active: 
+    - dev
 ---
 spring: 
-    profiles: dev
-    application: 
-        name: microservicecloud-config-atguigu-dev
+  profiles: dev
+  application: 
+    name: microservicecloud-config-atguigu-dev
 ---
 spring: 
-    profiles: test
-    application: 
-        name: microservicecloud-config-atguigu-test
+  profiles: test
+  application: 
+    name: microservicecloud-config-atguigu-test
